--- a/2026/janeiro/13.ipynb
+++ b/2026/janeiro/13.ipynb
@@ -5,19 +5,7 @@
    "id": "fb282f06",
    "metadata": {},
    "source": [
-    "<link href=\"https://fonts.googleapis.com/css2?family=Sevillana&display=swap\" rel=\"stylesheet\">\n",
-    "\n",
-    "\n",
-    "<div style=\"\n",
-    "  font-family: 'Sevillana', cursive;\n",
-    "  font-size: 20px;\n",
-    "  line-height: 1.5;\n",
-    "  color: #2c2c2c;\n",
-    "\">\n",
-    "\n",
-    "# Leituras\n",
-    "\n",
-    "</div>"
+    "# Leituras"
    ]
   },
   {
@@ -25,20 +13,7 @@
    "id": "b5f0e69e",
    "metadata": {},
    "source": [
-    "<link href=\"https://fonts.googleapis.com/css2?family=Sevillana&display=swap\" rel=\"stylesheet\">\n",
-    "\n",
-    "\n",
-    "<div style=\"\n",
-    "  font-family: 'Sevillana', cursive;\n",
-    "  font-size: 20px;\n",
-    "  line-height: 1.5;\n",
-    "  color: #2c2c2c;\n",
-    "\">\n",
-    "\n",
     "### Tese\n",
-    "\n",
-    "</div>\n",
-    "\n",
     "\n",
     "- [Desenvolvendo  um novo Modelo de Monte Carlo para colisões de íons pesados](https://www.teses.usp.br/teses/disponiveis/43/43134/tde-14102021-113026/publico/Dissertacao_Rodrigo.pdf)"
    ]
@@ -48,20 +23,7 @@
    "id": "e7eee349",
    "metadata": {},
    "source": [
-    "<link href=\"https://fonts.googleapis.com/css2?family=Sevillana&display=swap\" rel=\"stylesheet\">\n",
-    "\n",
-    "\n",
-    "<div style=\"\n",
-    "  font-family: 'Sevillana', cursive;\n",
-    "  font-size: 20px;\n",
-    "  line-height: 1.5;\n",
-    "  color: #2c2c2c;\n",
-    "\">\n",
-    "\n",
     "### Artigos\n",
-    "\n",
-    "</div>\n",
-    "\n",
     "\n",
     "- [Small System Collectivity in Relativistic Hadronic and Nuclear Collisions](https://arxiv.org/pdf/1801.03477)  : QGP -> Fluido perfeito"
    ]
@@ -71,19 +33,8 @@
    "id": "14513cfd",
    "metadata": {},
    "source": [
-    "<link href=\"https://fonts.googleapis.com/css2?family=Sevillana&display=swap\" rel=\"stylesheet\">\n",
-    "\n",
-    "\n",
-    "<div style=\"\n",
-    "  font-family: 'Sevillana', cursive;\n",
-    "  font-size: 20px;\n",
-    "  line-height: 1.5;\n",
-    "  color: #2c2c2c;\n",
-    "\">\n",
-    "\n",
     "## Conceitos\n",
     "\n",
-    "</div>\n",
     "\n",
     "1. [Modelo do gás](#gas-ideal-definicao--equacao-de-estado)\n",
     "2. [Modelo de Fluidos: Euler e Navier–Stokes](#liquido)\n",
@@ -111,10 +62,14 @@
     "### Gás ideal\n",
     "\n",
     "Um **gás ideal** é um modelo termodinâmico em que as partículas são tratadas como pontuais, com **interações intermoleculares desprezíveis** (exceto colisões elásticas), de modo que o estado macroscópico do sistema pode ser descrito por uma **equação de estado** simples. A forma mais comum é a **lei dos gases ideais**, que relaciona pressão, volume e temperatura por\n",
+    "\n",
+    "\n",
     "$$\n",
     "pV = nRT \\quad (\\text{ou } \\; pV = Nk_B T),\n",
     "$$\n",
-    "onde $p$ é a pressão, $V$ o volume, $T$ a temperatura absoluta, $n$ o número de mols, $R$ a constante universal dos gases (e $N,k_B$ a forma microscópica).  [Wikipedia](https://en.wikipedia.org/wiki/Ideal_gas_law?utm_source=chatgpt.com)\n",
+    "\n",
+    "\n",
+    "onde $p$ é a pressão, $V$ o volume, $T$ a temperatura absoluta, $n$ o número de mols, $R$ a constante universal dos gases (e $N,k_B$ a forma microscópica).  [Wikipedia](https://en.wikipedia.org/wiki/Ideal_gas_law?utm_source)\n",
     "\n",
     "---\n",
     "\n",
