--- a/2026/janeiro/14.ipynb
+++ b/2026/janeiro/14.ipynb
@@ -94,35 +94,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "id": "25a7ab13",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "70578430",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/* carregar fontes UMA vez */\n",
-      "@import url(\"https://fonts.googleapis.com/css2?family=Sevillana&display=swap\");\n",
-      "@import url(\"https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap\");\n",
-      "\n",
-      "/* ===== classes de fonte ===== */\n",
-      "\n",
-      ".font-sevillana{\n",
-      "  font-family: \"Sevillana\", cursive;\n",
-      "  font-size: 20px;\n",
-      "  line-height: 1.5;\n",
-      "  color: #2c2c2c;\n",
-      "}\n",
-      "\n",
-      ".font-inter{\n",
-      "  font-family: \"Inter\", system-ui, -apple-system, \"Segoe UI\", Roboto, Arial, sans-serif;\n",
-      "  font-size: 16px;\n",
-      "  line-height: 1.55;\n",
-      "  color: #222;\n",
-      "}\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -144,15 +127,27 @@
        "  font-size: 16px;\n",
        "  line-height: 1.55;\n",
        "  color: #222;\n",
+       "}\n",
+       "\n",
+       ".font-sevillana,\n",
+       ".font-sevillana p,\n",
+       ".font-sevillana li { \n",
+       "  font-family: \"Sevillana\", cursive !important;\n",
+       "}\n",
+       "\n",
+       ".font-sevillana h1,\n",
+       ".font-sevillana h2,\n",
+       ".font-sevillana h3,\n",
+       ".font-sevillana h4 {\n",
+       "  font-family: \"Sevillana\", cursive !important;\n",
        "}</style>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 2,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -160,17 +155,8 @@
     "from IPython.display import HTML\n",
     "\n",
     "css = Path(\"../../assets/teste.css\").read_text(encoding=\"utf-8\")\n",
-    "print(css)\n",
-    "HTML(f\"<style>{css}</style>\")"
+    "display(HTML(f\"<style>{css}</style>\"))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "25a7ab13",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
