--- a/2026/janeiro/2026-01-16/report.tex
+++ b/2026/janeiro/2026-01-16/report.tex
@@ -75,7 +75,7 @@
 %----------------------------------------------------------------------------------------
 \title[Report]{Report}          % [Versão curta]{Versão completa}
 \author[Nara Avila]{Nara Avila Moraes}            % [Versão curta]{Nome completo}
-\institute[IFUSP]{Physics Institute \\ (IFUSP)}
+\institute[IFUSP]{Physics Institute \\ IFUSP}
 \date[Ano]{2026 / 01 / 16}
 
 %----------------------------------------------------------------------------------------
