--- a/2026/janeiro/20.ipynb
+++ b/2026/janeiro/20.ipynb
@@ -9,10 +9,7 @@
     "\n",
     "|No.| Title | Referência / Ano | Páginas / Trecho |FIN| Conceitos-chave |\n",
     "|---|----------------------|------------------|------------------|---|-----------------|\n",
-    "|1|[MIT 18.650](https://ocw.mit.edu/courses/18-650-statistics-for-applications-fall-2016/)|2016|1-30|N|Statistics|\n",
-    "|2||||||\n",
-    "|3|||||\n",
-    "|4|||||"
+    "|1|[MIT 18.650](https://ocw.mit.edu/courses/18-650-statistics-for-applications-fall-2016/)|2016|1-30|N|Statistics|"
    ]
   },
   {
@@ -26,8 +23,8 @@
     "|---|----------------------|------------------|------------------|---|-----------------|\n",
     "|1|[STAR Collab](https://doi.org/10.1016/j.nuclphysa.2005.03.085)|2005|1-20|N|Primeiras evidencias QGP|\n",
     "|2|[]()|||||\n",
-    "|3|||||\n",
-    "|4|||||"
+    "|3|[]()||||\n",
+    "|4|[]()||||"
    ]
   },
   {
