--- a/2026/janeiro/21.ipynb
+++ b/2026/janeiro/21.ipynb
@@ -5,24 +5,38 @@
    "id": "82a9bc50",
    "metadata": {},
    "source": [
-    "$$\n",
-    "\\mathrm{Var}(X)=\\mathbb{E}[X^2]-\\mathbb{E}[X]^2\n",
-    "$$\n",
-    "\n",
     "<details>\n",
-    "<summary><b>Prova</b> (clique para abrir)</summary>\n",
+    "  <summary style=\"text-align:center; font-size:1.1em;\">\n",
+    "  \n",
+    "  $$\n",
+    "  \\mathrm{Var}(X)=\\mathbb{E}[X^2]-\\mathbb{E}[X]^2\n",
+    "  $$\n",
+    "  \n",
+    "  </summary>\n",
     "\n",
-    "**Passo 1.** Expanda:\n",
-    "$$\n",
-    "(X-\\mu)^2 = X^2 - 2\\mu X + \\mu^2\n",
-    "$$\n",
+    "  <div>\n",
     "\n",
-    "**Passo 2.** Aplique linearidade:\n",
-    "$$\n",
-    "\\mathbb{E}[(X-\\mu)^2]=\\mathbb{E}[X^2]-2\\mu\\mathbb{E}[X]+\\mu^2\n",
-    "$$\n",
+    "  **Prova.**\n",
     "\n",
-    "...\n",
+    "  **Passo 1.** Expanda:\n",
+    "  $$\n",
+    "  (X-\\mu)^2 = X^2 - 2\\mu X + \\mu^2\n",
+    "  $$\n",
+    "\n",
+    "  **Passo 2.** Aplique linearidade da esperança:\n",
+    "  $$\n",
+    "  \\mathbb{E}[(X-\\mu)^2]\n",
+    "  = \\mathbb{E}[X^2] - 2\\mu\\,\\mathbb{E}[X] + \\mu^2\n",
+    "  $$\n",
+    "\n",
+    "  **Passo 3.** Use $\\mu=\\mathbb{E}[X]$:\n",
+    "  $$\n",
+    "  \\mathbb{E}[X^2] - \\mu^2\n",
+    "  $$\n",
+    "\n",
+    "  \\(\\square\\)\n",
+    "\n",
+    "  </div>\n",
     "</details>"
    ]
   },
