--- a/2026/janeiro/21.ipynb
+++ b/2026/janeiro/21.ipynb
@@ -172,6 +172,166 @@
    "cell_type": "markdown",
    "id": "7481b325",
    "metadata": {},
+   "source": [
+    "# Distribuição Exponencial — leitura estrutural e conceitual\n",
+    "\n",
+    "## 1. Ideia central\n",
+    "A distribuição exponencial surge quando modelamos **tempo de espera até um evento**\n",
+    "sob a hipótese de **ausência de memória**.\n",
+    "\n",
+    "> O passado não altera a probabilidade do futuro.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 2. Definição matemática\n",
+    "\n",
+    "### Variável aleatória contínua\n",
+    "$$\n",
+    "X \\sim \\text{Exponencial}(\\lambda), \\quad \\lambda > 0\n",
+    "$$\n",
+    "\n",
+    "### Função densidade de probabilidade (pdf)\n",
+    "$$\n",
+    "f(x) = \\lambda e^{-\\lambda x}, \\quad x \\ge 0\n",
+    "$$\n",
+    "\n",
+    "### Função de distribuição acumulada (cdf)\n",
+    "$$\n",
+    "F(x) = P(X \\le x) = 1 - e^{-\\lambda x}\n",
+    "$$\n",
+    "\n",
+    "### Função de sobrevivência (cauda direita)\n",
+    "$$\n",
+    "S(x) = P(X > x) = e^{-\\lambda x}\n",
+    "$$\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 3. Propriedade fundamental — **tempo sem memória**\n",
+    "\n",
+    "A exponencial é a **única distribuição contínua** que satisfaz:\n",
+    "\n",
+    "$$\n",
+    "P(X > t_1 + t_2 \\mid X > t_1) = P(X > t_2)\n",
+    "$$\n",
+    "\n",
+    "Equivalente a:\n",
+    "$$\n",
+    "S(t_1 + t_2) = S(t_1) S(t_2)\n",
+    "$$\n",
+    "\n",
+    "A única função contínua que satisfaz essa equação funcional é:\n",
+    "$$\n",
+    "S(t) = e^{-\\lambda t}\n",
+    "$$\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 4. Interpretação física / probabilística\n",
+    "\n",
+    "- Eventos **não acumulam desgaste**\n",
+    "- O sistema **não envelhece**\n",
+    "- O risco instantâneo é constante\n",
+    "\n",
+    "### Taxa de falha (hazard)\n",
+    "$$\n",
+    "h(x) = \\frac{f(x)}{S(x)} = \\lambda\n",
+    "$$\n",
+    "\n",
+    "A probabilidade de falha **por unidade de tempo** é constante.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 5. O que a exponencial modela\n",
+    "\n",
+    "- Tempo até uma falha aleatória\n",
+    "- Tempo até chegada de um evento (fila, decaimento, emissão)\n",
+    "- Processos sem envelhecimento\n",
+    "- Eventos governados apenas pelo **presente**\n",
+    "\n",
+    "Exemplos:\n",
+    "- Decaimento radioativo\n",
+    "- Tempo até uma ligação chegar\n",
+    "- Tempo até um átomo decair\n",
+    "- Tempo até uma falha eletrônica aleatória\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 6. Comparação estrutural (informação imposta)\n",
+    "\n",
+    "| Informação imposta           | Distribuição resultante |\n",
+    "|-----------------------------|-------------------------|\n",
+    "| nenhuma                     | impossível              |\n",
+    "| média                       | exponencial              |\n",
+    "| média + variância           | normal                   |\n",
+    "| taxa de falha variável      | Weibull                  |\n",
+    "\n",
+    "A exponencial é a **distribuição de máxima entropia**\n",
+    "quando só sabemos a **média** e o suporte é $ x \\ge 0 $.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 7. Weibull — generalização natural\n",
+    "\n",
+    "A Weibull relaxa a hipótese de hazard constante.\n",
+    "\n",
+    "### Função de sobrevivência\n",
+    "$$\n",
+    "S(x) = e^{-(x/\\lambda)^k}\n",
+    "$$\n",
+    "\n",
+    "### Taxa de falha\n",
+    "$$\n",
+    "h(x) = \\frac{k}{\\lambda} \\left(\\frac{x}{\\lambda}\\right)^{k-1}\n",
+    "$$\n",
+    "\n",
+    "| Parâmetro $k$ | Comportamento do hazard | Interpretação |\n",
+    "|-----------------|------------------------|---------------|\n",
+    "| $k = 1$       | constante              | exponencial (sem memória) |\n",
+    "| $k < 1$       | decrescente            | falhas iniciais dominam |\n",
+    "| $k > 1$       | crescente              | envelhecimento / desgaste |\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 8. Insight estrutural unificador\n",
+    "\n",
+    "| Simetria imposta            | Equação funcional                  | Função forçada |\n",
+    "|-----------------------------|------------------------------------|----------------|\n",
+    "| Aditiva                     | $f(x+y) = f(x) + f(y)$            | linear         |\n",
+    "| Multiplicativa              | $g(xy) = g(x)g(y)$                | potência       |\n",
+    "| Tempo sem memória           | $S(t_1+t_2)=S(t_1)S(t_2)$         | exponencial    |\n",
+    "\n",
+    "**Simetrias + continuidade ⇒ forma funcional inevitável**\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 9. Ausência de escala (scale-free)\n",
+    "\n",
+    "A exponencial **não possui tempo característico privilegiado**:\n",
+    "- não existe “tempo típico”\n",
+    "- qualquer instante é estatisticamente equivalente\n",
+    "- o processo é **invariante por translação temporal**\n",
+    "\n",
+    "Isso é o que conecta:\n",
+    "- exponencial\n",
+    "- ausência de memória\n",
+    "- máxima entropia\n",
+    "- hazard constante\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 10. Leitura final\n",
+    "\n",
+    "> A exponencial não é apenas uma distribuição.  \n",
+    "> Ela é o **modelo matemático inevitável** quando o tempo **não carrega história**.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "472156f9",
+   "metadata": {},
    "source": []
   }
  ],
