--- a/2026/janeiro/21.ipynb
+++ b/2026/janeiro/21.ipynb
@@ -5,7 +5,7 @@
    "id": "95281978",
    "metadata": {},
    "source": [
-    "# Distribuição Exponencial — Fundamentos Conceituais\n",
+    "# Distribuição Exponencial\n",
     "\n",
     "## 1. Definição\n",
     "\n",
