--- a/2026/janeiro/2026-01-23/sections/section02.tex
+++ b/2026/janeiro/2026-01-23/sections/section02.tex
@@ -1,20 +1,20 @@
-\section{Next developments} % Seções são adicionadas para organizar sua apresentação em blocos discretos, todas as seções e subseções são automaticamente exibidas no índice como uma visão geral da apresentação, mas NÃO são exibidas como slides separados.
+% \section{Next developments} % Seções são adicionadas para organizar sua apresentação em blocos discretos, todas as seções e subseções são automaticamente exibidas no índice como uma visão geral da apresentação, mas NÃO são exibidas como slides separados.
 
-\begin{frame}
-  \frametitle{Tasks Planned}
-\begin{table}[h]
-\centering
-\begin{tabular}{|l|c|}
-\hline
-\textbf{Task} & \textbf{Due Date} \\
-\hline
-  &  \\
-\hline
-  &  \\
-\hline
-\end{tabular}
-\end{table}
-\end{frame}
+% \begin{frame}
+%   \frametitle{Tasks Planned}
+% \begin{table}[h]
+% \centering
+% \begin{tabular}{|l|c|}
+% \hline
+% \textbf{Task} & \textbf{Due Date} \\
+% \hline
+%   &  \\
+% \hline
+%   &  \\
+% \hline
+% \end{tabular}
+% \end{table}
+% \end{frame}
 %----------------------------------------------------------------------------------------
 % \begin{frame}[fragile]
 %     \frametitle{Python}
