--- a/2026/janeiro/2026-01-23/sections/section00.tex
+++ b/2026/janeiro/2026-01-23/sections/section00.tex
@@ -4,21 +4,61 @@
 
 \begin{frame}
   \frametitle{Tasks Status}
-    \begin{table}[h]
-        \centering
-        \begin{tabular}{|l|c|c|}
-        \hline
-        \textbf{Task} & \textbf{Status} & \textbf{Link} \\
-        \hline
-        Escrever projeto &  & \\
-        \hline
-        Criar toy model &  & \\
-        \hline
-        \end{tabular}
-    \end{table}
-\end{frame}
 
+  % Ajustes úteis em tabelas no Beamer
+  \centering
+  \renewcommand{\arraystretch}{1.15} % mais espaço vertical entre linhas
+
+  \begin{table}
+    \begin{tabular}{|p{0.58\textwidth}|c|p{0.22\textwidth}|}
+      \hline
+      \textbf{Task} & \textbf{Status} & \textbf{Link} \\
+      \hline
+
+      \textbf{Escrever projeto} &  &  \\
+      \hline
+      \hspace{1.2em}\small$\hookrightarrow$ Definir escopo e objetivos & \done &  \\
+      \hline
+      \hspace{1.2em}\small$\hookrightarrow$ Esboçar introdução (motivação + observáveis) & \done & \href{https://www.overleaf.com/project/696e133a1101ac682ea3dd98}{Projeto} \\
+      \hline
+      \hspace{1.2em}\small$\hookrightarrow$ Listar método/dados (toy model, GP, etc.) & \pending &  \\
+      \hline
+      \hspace{1.2em}\small$\hookrightarrow$ Montar bibliografia mínima & \done &  \\
+      \hline
+
+    \end{tabular}
+  \end{table}
+\end{frame}
 %----------------------------------------------------------------------------------------
+
+
+\begin{frame}
+  \frametitle{Tasks Status}
+
+  % Ajustes úteis em tabelas no Beamer
+  \centering
+  \renewcommand{\arraystretch}{1.15} % mais espaço vertical entre linhas
+
+  \begin{table}
+    \begin{tabular}{|p{0.58\textwidth}|c|p{0.22\textwidth}|}
+      \hline
+      \textbf{Task} & \textbf{Status} & \textbf{Link} \\
+      \hline
+      \textbf{Criar toy model} &  &  \\
+      \hline
+      \hspace{1.2em}\small$\hookrightarrow$ Gerar dados sintéticos (correlacionados + ruído) & \done &  \\
+      \hline
+      \hspace{1.2em}\small$\hookrightarrow$ Ajustar GP (kernel, hiperparâmetros) & \pending &  \\
+      \hline
+      \hspace{1.2em}\small$\hookrightarrow$ Validar: resíduos, log-likelihood, cobertura & \pending &  \\
+      \hline
+      \hspace{1.2em}\small$\hookrightarrow$ Criar 2--3 plots “de apresentação” & \pending &  \\
+      \hline
+    \end{tabular}
+  \end{table}
+\end{frame}
+%----------------------------------------------------------------------------------------
+
 % \begin{frame}{Uma imagem}
 %     \frametitle{Historical Records}
 %     In addition, it is possible to retrieve the full search history by running the script directly via GitHub Actions.
