--- a/2026/janeiro/2026-01-23/sections/section01.tex
+++ b/2026/janeiro/2026-01-23/sections/section01.tex
@@ -3,13 +3,51 @@
 %----------------------------------------------------------------------------------------
 
 \begin{frame}
-  \frametitle{Learned Concepts}
-  Key insights from recent studies:
-  % \begin{itemize}
-  %   \item Flow anisotropies ($v_0$, $v_1$, $v_2$) and collective behavior (correlations) provide evidence for the emergence of a hydrodynamic phase in heavy ion collisions~\cite{noronha_progress_2024}.
-  %   \item Although hydrodynamics is characterized by a short applicability timescale (low Reynolds number), collective behavior is still observed in small systems, including proton--nucleus collisions, in recent experiments~\cite{noronha_progress_2024,paquet_characterizing_nodate}.
-  % \end{itemize}
+  \frametitle{ Recent studies}
+  \begin{table}
+    \begin{tabular}{|p{0.58\textwidth}|c|p{0.22\textwidth}|}
+      \hline
+      \textbf{Article} & \textbf{Status} & \textbf{Link} \\
+      \hline
+      Characterizing the non-equilibrium quark-gluon plasma with photons and hadrons & \inprogress & \href{https://j-f-paquet.github.io/theses/phd_thesis_final_JFPaquet.pdf}{Thesis} \\
+      \hline
+      Evidence for a New State of Matter   & \done & \href{https://arxiv.org/pdf/nucl-th/0002042}{Link} \\
+      \hline
+      Bayesian parameter estimation for  relativistic heavy-ion collisions & \inprogress & \href{https://arxiv.org/pdf/1804.06469}{Thesis} \\
+      \hline
+       Small System Collectivity  in Relativistic Hadronic  and Nuclear Collisions & \done & \href{https://arxiv.org/pdf/1801.03477}{Link} \\
+      \hline
+       Progress and Challenges in Small Systems & \done & \href{https://arxiv.org/pdf/2401.09208}{Link} \\
+      \hline
+    \end{tabular}
+  \end{table}
 \end{frame}
+
+\begin{frame}
+  \frametitle{Recent studies}
+
+  \begin{table}
+    \begin{tabular}{|p{0.5\textwidth}|c|p{0.22\textwidth}|}
+      \hline
+      \textbf{Toolbox} & \textbf{Status} & \textbf{Link} \\
+      \hline
+       2. Gaussian Processes & \inprogress & \href{https://www.ifsc.usp.br/~roland/pdf/PIQFT_00.pdf}{Lecture Notes}  \\
+      \hline
+    \end{tabular}
+  \end{table}
+
+  \begin{table}
+    \begin{tabular}{|p{0.5\textwidth}|c|p{0.25\textwidth}|}
+      \hline
+      \textbf{Course} & \textbf{Status} & \textbf{Link} \\
+      \hline
+       Statistics For Applications & \inprogress & \href{https://ocw.mit.edu/courses/18-650-statistics-for-applications-fall-2016/}{MIT OCW 18.650}\\
+      \hline
+    \end{tabular}
+  \end{table}
+\end{frame}
+
+
 
 
 % \begin{frame}{Uma imagem}
