--- a/2026/janeiro/2026-01-23/sections/section03.tex
+++ b/2026/janeiro/2026-01-23/sections/section03.tex
@@ -2,15 +2,34 @@
 
 \begin{frame}{Selected Paper}
 \frametitle{Selected Paper}
-%    \begin{figure}[h]
-%        \centering
-%        \includegraphics[width=0.7\textwidth]{img/selected_article.png}
-%        \caption{The promises and pitfalls of deep kernel learning” (Ober et al., 2021), providing a critical analysis of the strengths, limitations, and failure modes of deep kernel learning models.}
-%        \label{fig:selected_article}
-%    \end{figure}
+   \begin{figure}[h]
+       \centering
+       \includegraphics[width=0.6\textwidth]{img/selected_article.png}
+       \caption{Claim of an acceleration of order $10^{5}$ in end-to-end heavy-ion collision model evaluations when replacing the full simulation chain with a generative AI-based surrogate model.}
+       \label{fig:selected_article}
+   \end{figure}
 \end{frame}
 
-\begin{frame}{References}
-    \nocite{*}
-    \printbibliography
+\begin{frame}{Selected Paper}
+\frametitle{Selected Paper}
+   \begin{figure}[h]
+       \centering
+       \includegraphics[width=1\textwidth]{img/sa-results-1.png}
+       \label{fig:selected_article}
+   \end{figure}
 \end{frame}
+
+
+\begin{frame}{Selected Paper}
+\frametitle{Selected Paper}
+   \begin{figure}[h]
+       \centering
+       \includegraphics[width=1\textwidth]{img/sa-results-2.png}
+       \label{fig:selected_article}
+   \end{figure}
+\end{frame}
+
+% \begin{frame}{References}
+%     \nocite{*}
+%     \printbibliography
+% \end{frame}
