--- a/2026/janeiro/2026-01-30/report.tex
+++ b/2026/janeiro/2026-01-30/report.tex
@@ -109,10 +109,10 @@
 \end{frame}
 
 % Inclusão das seções
-\include{sections/section00}
-\include{sections/section01}
-\include{sections/section02}
-\include{sections/section03}
+% \include{sections/section00}
+% \include{sections/section01}
+% \include{sections/section02}
+% \include{sections/section03}
 
 % Slide final
 % \begin{frame}
